# serial-plotter

./: README.md  config.py  main.py  plot_widget.py  pyproject.toml  serial_handler.py
