[project]
name = "serial-plotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.3.3",
    "pygame>=2.6.1",
    "pyqt6>=6.9.1",
    "pyserial>=3.5",
    "pyside6>=6.9.2",
    "pytest>=8.4.2",
    "vispy>=0.15.2",
]
